Fixed layout bug.

--- a/assets/css/trainerPage/trainerPage.scss
+++ b/assets/css/trainerPage/trainerPage.scss
@@ -23,16 +23,17 @@
 .trainerInfo__right {
   width: 50%;
   padding: 15px 0 0 15px;
+}
+
+.trainerInfo__inputs {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
 
 .trainerInfo__right--admin {
   transition: all .3s ease-in;
 
   &:hover {
-
     .btn:first-of-type {
       color: white;
       font-size: .85em;
@@ -178,6 +179,9 @@
   height: 30px;
   padding: 3px 0 3px 5px;
   margin-left: 20px;
+  position: relative;
+  right: 0;
+  max-width: 375px;
 }
 
 .btn {
